fixing the footer problem on firefox and chrome
on behalf of Seif Oueslati

--- a/Style/Style.css
+++ b/Style/Style.css
@@ -265,33 +265,29 @@ i.ion-social-facebook.large{
    		margin-left: 8px;
    }
 
-   i.mdi-action-assignment-late{
-   	font-size: 12rem;
-   	color: #ad1457;
-   }
-
-   i.mdi-action-question-answer{
-   	font-size: 12rem;
-   	color: #ad1457;
-   }
-
-   i.mdi-communication-live-help{
-   	font-size: 12rem;
-   	color: #ad1457;
-   }
-
-   p.icone-titre{
-   	color: white;
-   }
-
-   p.icone-texte{
-   	color: white;
-   }
+i.mdi-action-assignment-late{
+	font-size: 12rem;
+	color: #ad1457;
 }
 
-footer.page-footer{
-   	margin-top: 0px;
+i.mdi-action-question-answer{
+	font-size: 12rem;
+	color: #ad1457;
 }
+
+i.mdi-communication-live-help{
+	font-size: 12rem;
+	color: #ad1457;
+}
+
+p.icone-titre{
+	color: white;
+}
+
+p.icone-texte{
+	color: white;
+}
+
 
 #about .container{
 	text-align: center;
@@ -299,5 +295,8 @@ footer.page-footer{
 	font-family: Ultra;
 	color: white;
 	text-shadow: 0 0 7px #37474f;
+}
 
+footer.page-footer{
+	margin-top: 0px;
 }
